# OMANchatbot

./: .gitignore  APACHE_DEPLOYMENT.md  APACHE_SETUP_GUIDE.md  COMBINED_PROJECT_DOCS.md  DOCUMENT_INGESTION_RAG_LOGGING.md  FINANCIAL_DOCUMENT_ANALYSIS.md  Hallucination_fixed.ipynb  LOGGING_ENHANCEMENTS.md  MARKDOWN_TRANSCRIPTION_CHANGES.md  RAG_CONFIGURATION.md  RAG_INTEGRATION_README.md  README.md  apache_management.py  app.py  banking_whisper_colab_test.py  bash.exe.stackdump  build_production.sh  config.env  config.py  create_postgres_db.py  create_sqlite_db.py  demo_config.py  deploy_apache.sh  ingest_documents_gpu.py  migrate_chat_attachments.py  migrate_to_postgres.py  package-lock.json  package.json  pyvenv.cfg  rag_module_py.py  requirements.txt  requirements_hallucination_fixed_rag.txt  requirements_rag.txt  requirements_whisper.txt  run.py  run_app.py  run_with_config.py  seed_users.py  server.js  server_audio_processor.py  (+15 more)
Scripts/: activate  activate.bat  check_tables_sqlalchemy.py  create_and_list_tables.py  create_pg_trgm.py  list_postgres_tables.py
apache/: .htaccess  cbo-api.service  cbo-chatbot.conf  cbo-flask.conf  cbo-flask.service
app_lib/: __init__.py  auth.py  db.py  difflib_responses.py  extract.py  faq_service.py  gemini.py  gemini_old.py.bak  (+9 more)
finverify/: README.md  pyproject.toml
finverify/finverify/: __init__.py  cli.py  formulas.py  utils.py  verifier.py
finverify/finverify.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
finverify/finverify/extractors/: __init__.py  ocr.py  pdf.py  structured.py
(+41 files in other folders)
